Unreleased
===============================
 * Added: User options for metadata fallback string substitutions
     - gsub_text_area_*_fallback_*

metadata-osd-0.5.1 / 2023-02-26
===============================
 * fix: Apply textarea_2 styling options also to textarea_2_reldate
 * fix: Remove extraneous quot marks from example configuration file

metadata-osd-0.5.0 / 2023-02-10
===============================
 * BREAKING CHANGES:
     - user config files named 'metadata-osd.conf' must be
       renamed to 'metadata_osd.conf' (version 0.1.0 heritage)
     - config option 'show_current_chapter_number' must be
       renamed to 'show_chapternumber'
     - config option 'show_current_albumtrack_number' or
       'show_albumtrack_number' must be renamed to
       'show_albumtracknumber'
 * New user config options
     - show_chapternumber
     - show_albumtracknumber
 * Exposed key binding names for input.conf
 * Disabled by default while viewing pictures
 * Matched autohide delays of 'metadata-osd' and 'status osd'
 * Removing newline characters in OSD messages
 * Not showing album's track number by default
 * New styling config options
 * OSD message truncate on UTF-8 characters (not bytes)

metadata-osd-0.4.1 / 2022-10-02
===============================
 * fix: Add missing check in year metadata pattern extraction

metadata-osd-0.4.0 / 2022-09-24
===============================
 * Tune metadata processing:
     - Cut out and show just the year (not the full date, if present)
     - Support more possible keys for <artist> metadata, namely:
         - 'album_artist'
         - 'composer'
     - Show album's track if not equal to playlist's track
       (playlists can be long and traversing multiple directories)

metadata-osd-0.3.0 / 2022-08-31
===============================
 * Added: Config option to disable OSD-2

metadata-osd-0.2.0 / 2022-08-20
===============================
 * Added: Media-type related config options:
     enable_for_audio