@@ -3,6 +3,10 @@ Unreleased
  * Added: User options for metadata fallback string substitutions
      - gsub_text_area_*_fallback_*
 
+metadata-osd-0.5.2 / 2023-03-07
+===============================
+ * fix: Reset OSD data before loading new file
+
 metadata-osd-0.5.1 / 2023-02-26
 ===============================
  * fix: Apply textarea_2 styling options also to textarea_2_reldate
